--- a/src/app/admin/registros/registro-nna/registro-nna.component.html
+++ b/src/app/admin/registros/registro-nna/registro-nna.component.html
@@ -33,13 +33,13 @@
               <input id="dvNna" type="text" class="form-control"
                      formControlName="dvNna" placeholder="0" />
             </div>
-            <div class="col-md-2 d-flex align-items-end">
+            <div class="col-md-2 d-flex align-items-center">
               <button type="button" class="btn btn-primary w-100"
                       (click)="validarRutNna()">
                 Validar rut   <mat-icon class="icon">add_circle_outline</mat-icon>
               </button>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 pt-3">
               <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Consultar por las vías de ingreso</mat-label>
                 <mat-select formControlName="viasIngreso">
