--- a/src/app/admin/gestion-usuariosinstituciones/editar-usuariosinstituciones/editar-usuariosinstituciones.component.html
+++ b/src/app/admin/gestion-usuariosinstituciones/editar-usuariosinstituciones/editar-usuariosinstituciones.component.html
@@ -22,6 +22,9 @@
             <div class="form-group mt-3">
                 <label for="rut" class="form-label">RUT</label>
                 <input id="rut" type="text" formControlName="rut" class="form-control">
+                <small class="form-text text-muted">
+                    Ingresar sin puntos y con guion final. Ejemplo: 12345678-9
+                </small>
             </div>
 
             <!-- Sexo -->
