--- a/src/app/admin/registros/registro-cuidador-principal/registro-cuidador-principal.component.scss
+++ b/src/app/admin/registros/registro-cuidador-principal/registro-cuidador-principal.component.scss
@@ -102,3 +102,6 @@
     font-size: 16px;
     transition: border-color 0.3s ease-in-out;
 }
+  ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: #ffffff !important;
+}
