--- a/src/app/admin/registros/registro-nna/registro-nna.component.html
+++ b/src/app/admin/registros/registro-nna/registro-nna.component.html
@@ -11,13 +11,24 @@
           <div class="row g-3">
             <div class="col-md-6">
               <label for="profesional" class="form-label">Profesional a cargo</label>
-              <input id="profesional" type="text" class="form-control"
-                     formControlName="profesional" placeholder="Asignar" />
+              <mat-form-field appearance="fill" class="w-100">
+              <mat-select formControlName="profesional">
+              <mat-option *ngFor="let prof of profesionales" [value]="prof.id">
+              {{ prof.nombre }}
+              </mat-option>
+              </mat-select>
+              </mat-form-field>
             </div>
             <div class="col-md-6">
               <label for="institucion" class="form-label">¿A qué institución ejecutora perteneces?</label>
-              <input id="institucion" type="text" class="form-control"
-                     formControlName="institucion" placeholder="Asignar" />
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-select formControlName="institucion">
+                  <mat-option value="">Seleccionar *</mat-option>
+                  <mat-option *ngFor="let inst of instituciones" [value]="inst.id">
+                    {{ inst.nombre_fantasia }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
             </div>
           </div>
   
@@ -39,9 +50,9 @@
                 Validar rut   <mat-icon class="icon">add_circle_outline</mat-icon>
               </button>
             </div>
-            <div class="col-md-5 pt-3">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Consultar por las vías de ingreso</mat-label>
+            <div class="col-md-5 pt-0">
+              <label for="viasIngreso" class="form-label">Consultar por las vías de ingreso</label>
+              <mat-form-field appearance="fill" class="full-width">
                 <mat-select formControlName="viasIngreso">
                   <mat-option value="">Seleccionar *</mat-option>
                   <mat-option *ngFor="let v of viasIngreso" [value]="v">
@@ -74,8 +85,8 @@
                      formControlName="edadNna" placeholder="Años cumplidos al ingreso" />
             </div>
             <div class="col-md-6">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Sexo</mat-label>
+              <label for="sexo" class="form-label">Sexo</label>
+              <mat-form-field appearance="fill" class="full-width">
                 <mat-select formControlName="sexoNna">
                   <mat-option value="">Seleccionar *</mat-option>
                   <mat-option value="M">Masculino</mat-option>
@@ -88,8 +99,8 @@
           <!-- Parentescos -->
           <div class="row g-3 mt-3">
             <div class="col-md-6">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Parentesco con ASPL</mat-label>
+              <label for="parentescoASPL" class="form-label">Parentesco con ASPL</label>
+              <mat-form-field appearance="fill" class="full-width">
                 <mat-select formControlName="parentescoAsplNna">
                   <mat-option value="">Seleccionar *</mat-option>
                   <mat-option *ngFor="let p of parentescosAspl" [value]="p">
@@ -99,8 +110,9 @@
               </mat-form-field>
             </div>
             <div class="col-md-6">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Parentesco con CP</mat-label>
+              <label for="parentescoCP" class="form-label">Parentesco con CP</label>
+              <mat-form-field appearance="fill" class="full-width">
+                <mat-label></mat-label>
                 <mat-select formControlName="parentescoCpNna">
                   <mat-option value="">Seleccionar *</mat-option>
                   <mat-option *ngFor="let p of parentescosCp" [value]="p">
@@ -114,8 +126,8 @@
           <!-- Nacionalidad -->
           <div class="row g-3 mt-3">
             <div class="col-12">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Nacionalidad</mat-label>
+              <label for="nacionalidad" class="form-label">Nacionalidad</label>
+              <mat-form-field appearance="fill" class="full-width">
                 <mat-select formControlName="nacionalidadNna">
                   <mat-option value="">Seleccionar *</mat-option>
                   <mat-option *ngFor="let n of nacionalidades" [value]="n">
@@ -125,45 +137,76 @@
               </mat-form-field>
             </div>
           </div>
-  
-          <!-- Participación en programa -->
-          <div class="row g-3 mt-4 align-items-center" style="display: block;">
-            <div class="col-auto">
-              <label class="form-label mb-0">¿Quieres ser parte del programa?</label>
+<!-- Participación en programa -->
+        <div class="row g-3 mt-4 align-items-center" style="display: block;">
+          <div class="col-auto">
+            <label class="form-label mb-0">¿Quieres ser parte del programa?</label>
+          </div>
+          <div class="col-auto d-flex">
+            <div class="form-check">
+              <input class="form-check-input"
+                     type="radio"
+                     formControlName="participaPrograma"
+                     [value]="true"
+                     id="progSiNna" />
+              <label class="form-check-label" for="progSiNna">Sí</label>
             </div>
-            <div class="col-auto d-flex">
-              <div class="form-check">
-                <input class="form-check-input" type="radio"
-                       formControlName="participaPrograma" [value]="true" id="progSiNna" />
-                <label class="form-check-label" for="progSiNna">Sí</label>
-              </div>
-              <div class="form-check ms-3">
-                <input class="form-check-input" type="radio"
-                       formControlName="participaPrograma" [value]="false" id="progNoNna" />
-                <label class="form-check-label" for="progNoNna">No</label>
-              </div>
+            <div class="form-check ms-3">
+              <input class="form-check-input"
+                     type="radio"
+                     formControlName="participaPrograma"
+                     [value]="false"
+                     id="progNoNna" />
+              <label class="form-check-label" for="progNoNna">No</label>
             </div>
           </div>
-  
-          <!-- Motivos si No participa -->
-          <div class="row g-3 mt-3"
-               *ngIf="nnaForm.get('participaPrograma')?.value === false">
-            <div class="col-12">
-              <label for="motivoNoNna" class="form-label">
-                ¿Por qué no quieres ser parte del programa?
-              </label>
-              <textarea id="motivoNoNna" rows="3" class="form-control"
-                        formControlName="motivoNoParticipa" placeholder="Escribe los motivos">
-              </textarea>
-            </div>
+        </div>
+
+        <!-- Motivos si No participa -->
+        <div class="row g-3 mt-3"
+             *ngIf="nnaForm.get('participaPrograma')?.value === false">
+          <div class="col-12">
+            <label for="motivoNoNna" class="form-label">
+              ¿Por qué no quieres ser parte del programa?
+            </label>
+            <textarea id="motivoNoNna"
+                      rows="3"
+                      class="form-control"
+                      formControlName="motivoNoParticipa"
+                      placeholder="Escribe los motivos">
+            </textarea>
           </div>
-  
-          <!-- Botón Guardar -->
-          <div class="button-container mt-4" style="text-align: -webkit-right;">
-            <button type="submit" class="btn btn-success" [disabled]="nnaForm.invalid">
-              Guardar  <mat-icon class="icon">add_circle_outline</mat-icon>
+        </div>
+
+        <!-- Descarga y carga de documento firmado si Sí participa -->
+        <div class="row g-3 mt-0"
+             *ngIf="nnaForm.get('participaPrograma')?.value === true">
+          <div class="col-md-3 d-flex" style="align-items: end;">
+            <!-- Botón descarga -->
+            <button type="button"
+                    class="btn btn-primary w-100"
+                    (click)="descargarDocumento()">
+              Descargar documento <mat-icon class="icon">add_circle_outline</mat-icon>
             </button>
           </div>
+          <div class="col-md-6">
+            <!-- Upload -->
+            <label for="docFirmado" class="form-label">Documento firmado</label>
+            <input id="docFirmado"
+                   type="file"
+                   class="form-control"
+                   (change)="onDocumentoFirmadoChange($event)" />
+          </div>
+        </div>
+
+        <!-- Botón Guardar -->
+        <div class="button-container mt-4" style="text-align: -webkit-right;">
+          <button type="submit"
+                  class="btn btn-success"
+                  [disabled]="nnaForm.invalid">
+            Guardar  <mat-icon class="icon">add_circle_outline</mat-icon>
+          </button>
+        </div>
   
         </form>
       </div>
