--- a/src/app/admin/registros/registro-persona-privada/registro-persona-privada.component.html
+++ b/src/app/admin/registros/registro-persona-privada/registro-persona-privada.component.html
@@ -10,12 +10,13 @@
           <!-- Rut PPL / DV / Validar / Asignar NNA -->
           <div class="row g-3">
             <div class="col-md-12">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Asignar NNA</mat-label>
+              <label for="Asignar-NNA" class="form-label">Asignar NNA</label>
+              <mat-form-field appearance="fill" class="w-100 mt-3-md-0">
+                <mat-label></mat-label>
                 <mat-select formControlName="asignarNna">
                   <mat-option value="">Seleccionar *</mat-option>
                   <mat-option *ngFor="let nna of listaNnas" [value]="nna.id">
-                    {{ nna.nombre }}
+                    {{ nna.nombre }} 
                   </mat-option>
                 </mat-select>
               </mat-form-field>
@@ -77,10 +78,10 @@
           </div>
   
           <!-- Sexo / Centro penal -->
-          <div class="row g-3 mt-3">
+          <div class="row g-3 mt-0">
             <div class="col-md-4">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Sexo</mat-label>
+              <label for="Sexo" class="form-label">Sexo</label>
+              <mat-form-field appearance="fill" class="w-100 mt-3-md-0">
                 <mat-select formControlName="sexoPpl">
                   <mat-option value="">Seleccionar *</mat-option>
                   <mat-option value="M">Masculino</mat-option>
@@ -88,7 +89,7 @@
                 </mat-select>
               </mat-form-field>
             </div>
-            <div class="col-md-8 mt-0">
+            <div class="col-md-8 mt-4">
               <label for="centroPenal" class="form-label">Centro penal</label>
               <input
                 id="centroPenal"
@@ -103,12 +104,12 @@
           <!-- Región del centro penal -->
           <div class="row g-3 mt-0">
             <div class="col-12">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Región del centro penal</mat-label>
+              <label for="Región" class="form-label">Región del centro penal</label>
+              <mat-form-field appearance="fill" class="w-100 mt-3-md-0">
                 <mat-select formControlName="regionPenal">
                   <mat-option value="">Seleccionar *</mat-option>
-                  <mat-option *ngFor="let r of regionesPenal" [value]="r">
-                    {{ r }}
+                   <mat-option *ngFor="let r of regiones" [value]="r.id">
+                    {{ r.nombre }}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
@@ -118,8 +119,8 @@
           <!-- Nacionalidad -->
           <div class="row g-3 mt-0">
             <div class="col-12">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>Nacionalidad</mat-label>
+              <label for="Nacionalidad" class="form-label">Nacionalidad</label>
+              <mat-form-field appearance="fill" class="w-100 mt-3-md-0">
                 <mat-select formControlName="nacionalidadPpl">
                   <mat-option value="">Seleccionar *</mat-option>
                   <mat-option *ngFor="let n of nacionalidades" [value]="n">
