--- a/src/app/admin/registros/registro-persona-privada/registro-persona-privada.component.scss
+++ b/src/app/admin/registros/registro-persona-privada/registro-persona-privada.component.scss
@@ -97,4 +97,6 @@ textarea#motivoNoNna {
   ::ng-deep .mat-mdc-select-value {
     margin-top: 0.4rem;
   }
-  
+    ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: #ffffff !important;
+}
