registro nna mejoras

--- a/src/app/admin/registros/registro-nna/registro-nna.component.html
+++ b/src/app/admin/registros/registro-nna/registro-nna.component.html
@@ -204,6 +204,8 @@
 
         <!-- Botón Guardar -->
         <div class="button-container mt-4" style="text-align: -webkit-right;">
+          <input type="hidden" formControlName="territorio_id">
+
           <button type="submit"
                   class="btn btn-success"
                   [disabled]="nnaForm.invalid">
